# spell_bubble_mod_tool

./: .gitignore  .gitmodules  Cargo.toml  IDA_occurrences_process.py  LICENSE  README.md  build.rs  generate_patch_config.py
src/: cli.yml  enum_generator.rs  example.yml  exefs.rs  exefs_patches.toml  external_map.rs  ffmpeg_helper.rs  interop.rs  main.rs  map.rs  song_info.rs  test.yml  ui.rs
src/exefs/: interop.rs
src/ext_map_parser/: osu.rs
src/external_map/: adofai.rs  blank.osu  osu.rs  template.adofai
src/map/: enums.rs  interop.rs
src/ui/: AddMapPage.slint  CustomMapEditor.slint  DumpInfoPage.slint  MainWindow.slint
src/ui/win-zh_CN/: AddMapPage.slint  CustomMapEditor.slint  DumpInfoPage.slint  MainWindow.slint  Utilities.slint
