[package]
name = "spell_bubble_mod_tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mod_tool"
path = "src/main.rs"

[[bin]]
name = "enum_generator"
path = "src/enum_generator.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
yaml-rust = "0.4"