[package]
name = "spell_bubble_mod_tool"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mod_tool"
path = "src/main.rs"

[[bin]]
name = "enum_generator"
path = "src/enum_generator.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7.5"
maplit = "1.0.2"
serde_with = "3.0.0"
itertools = "0.11.0"
thiserror = "1.0.41"
anyhow = "1.0.71"
serde_json = "1.0.100"
memmem = "0.1.1"
fs_extra = "1.3.0"
csv = "1.2.2"

[build-dependencies]
build-target = "0.4.0"
